@@ -39,7 +39,4 @@ for 0.7
 for 0.8 -- 1.0
 --------------
 
-- more setuptools entrypoints (html formatter etc.)
-  see paste script's Commands
-
 - add folding? would require more language-aware parsers...
